--- a/Final_Project/src/main/webapp/WEB-INF/web.xml
+++ b/Final_Project/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     <filter-name>encoding</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
     <init-param>
-      <param-name>encodig</param-name>
+      <param-name>encoding</param-name>
       <param-value>UTF-8</param-value>
     </init-param>
   </filter>
